# encoder-decoder

./: .gitignore  Makefile  README.md  config.yaml  logging.yaml  pyproject.toml  requirements.txt
src/: 0_curate_data.ipynb  1_rnn_classification.ipynb  2_encoder_decoder_names.ipynb  3_english_to_french.ipynb
src/common/: dataloaders.py  language.py  models.py  preprocess.py  tokenizers.py  utils.py
